--- a/app/src/main/res/layout/activity_main_home.xml
+++ b/app/src/main/res/layout/activity_main_home.xml
@@ -16,6 +16,62 @@
     tools:context=".presentation.main.MainHomeActivity">
 
     <!--
+        수온 정보 리스트 영역
+        Temperature Information List Area
+
+        SwipeRefreshLayout: Pull to Refresh 기능 제공
+        - iOS의 UIRefreshControl과 동일한 기능
+        - 아래로 당겨서 새로고침
+    -->
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefreshLayout"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/btnOceanFavorites"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="16dp">
+
+        <!--
+            RecyclerView: 수온 정보 리스트
+            RecyclerView: Temperature information list
+
+            - iOS의 UITableView와 유사
+            - 스크롤 가능한 리스트 뷰
+        -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewTemperature"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#40000000"
+            android:padding="8dp" />
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+    <!--
+        수온 즐겨찾기 버튼
+        Ocean Favorites Button
+
+        즐겨찾기 관리 화면으로 이동
+    -->
+    <Button
+        android:id="@+id/btnOceanFavorites"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/button_background"
+        android:text="@string/btn_ocean_favorites"
+        android:textColor="@color/button_text"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/bottomButtonContainer"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!--
         하단 버튼 컨테이너
         Bottom button container
 
